--- a/baby-data-process/pom.xml
+++ b/baby-data-process/pom.xml
@@ -17,6 +17,7 @@
         <module>baby-data-process-tf</module>
         <module>baby-data-process-opencv</module>
         <module>baby-data-process-piaihat</module>
+        <module>baby-data-process-toolkit</module>
     </modules>
 
     <dependencies>
