--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-parent</artifactId>
-        <version>3.4.4</version>
-    </parent>
-
     <groupId>ch.sebpiller.babyphone</groupId>
     <artifactId>smart-babyphone</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -25,23 +19,35 @@
     </modules>
 
     <properties>
+        <java.version>23</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <!-- ===== PLUGINS VERSIONS =================-->
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+
+        <!-- ===== DEPENDENCIES VERSIONS ============-->
+        <spring-boot.version>3.4.4</spring-boot.version>
+        <lombok.version>1.18.38</lombok.version>
+        <toolkit-spi.version>1.0-SNAPSHOT</toolkit-spi.version>
+        <javacv.version>1.5.8</javacv.version>
         <tensorflow.version>1.0.0</tensorflow.version>
-
-        <argLine/>
-        <java.version>21</java.version>
     </properties>
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                </plugin>
 
                 <plugin>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>${maven-enforcer-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>enforce-maven</id>
@@ -54,13 +60,28 @@
                                         <version>[3.8.1,)</version>
                                     </requireMavenVersion>
                                     <requireJavaVersion>
-                                        <version>[21,)</version>
+                                        <version>[${java.version},)</version>
                                     </requireJavaVersion>
+
                                 </rules>
                                 <failFast>true</failFast>
                             </configuration>
                         </execution>
                     </executions>
+                </plugin>
+
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
                 </plugin>
 
             </plugins>
@@ -72,53 +93,22 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.14.0</version>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>1.18.38</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
             </plugin>
-
         </plugins>
+
     </build>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.4.4</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.38</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>ch.sebpiller.toolkit</groupId>
-                <artifactId>toolkit-spi-aop</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </dependency>
-
-
+            <!-- ============ MODULES DEPENDENCIES ====================== -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>baby-samples-data</artifactId>
                 <version>${project.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
@@ -155,15 +145,39 @@
                 <artifactId>baby-data-process-piaihat</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!-- ===== END OF MODULES DEPENDENCIES ====================== -->
 
 
+            <!-- ===== GENERAL TOOLING ================================== -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.sebpiller.toolkit</groupId>
+                <artifactId>toolkit-spi-aop</artifactId>
+                <version>${toolkit-spi.version}</version>
+            </dependency>
+            <!-- ===== END OF GENERAL TOOLING =========================== -->
+
+
+            <!-- ===== COMPUTER VISION AND NEURAL NETWORKS ============== -->
             <dependency>
                 <groupId>org.bytedeco</groupId>
                 <artifactId>javacv-platform</artifactId>
-                <version>1.5.8</version>
+                <version>${javacv.version}</version>
             </dependency>
-
-
             <dependency>
                 <groupId>org.tensorflow</groupId>
                 <artifactId>tensorflow-core-platform</artifactId>
@@ -174,38 +188,47 @@
                 <artifactId>tensorflow-framework</artifactId>
                 <version>${tensorflow.version}</version>
             </dependency>
+            <!-- ===== END OF COMPUTER VISION AND NEURAL NETWORKS ======= -->
 
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+
+        <!-- ===== TESTING ============================================== -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- ===== END OF TESTING ======================================= -->
+
+
+        <!-- ===== TOOLKITS ============================================= -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>ch.sebpiller.toolkit</groupId>
-            <artifactId>toolkit-spi-aop</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>ch.sebpiller.toolkit</groupId>
+            <artifactId>toolkit-spi-aop</artifactId>
         </dependency>
+        <!-- ===== END OF TOOLKITS ====================================== -->
+
     </dependencies>
 
 
