--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </modules>
 
     <properties>
-        <java.version>23</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -169,6 +169,16 @@
                 <artifactId>toolkit-spi-aop</artifactId>
                 <version>${toolkit-spi.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>1.14.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.axet</groupId>
+                <artifactId>TarsosDSP</artifactId>
+                <version>2.4-1</version>
+            </dependency>
             <!-- ===== END OF GENERAL TOOLING =========================== -->
 
 
@@ -178,9 +188,15 @@
                 <artifactId>javacv-platform</artifactId>
                 <version>${javacv.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.tensorflow</groupId>
                 <artifactId>tensorflow-core-platform</artifactId>
+                <version>${tensorflow.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.tensorflow</groupId>
+                <artifactId>tensorflow-core-native</artifactId>
                 <version>${tensorflow.version}</version>
             </dependency>
             <dependency>
