--- a/baby-rest-api/pom.xml
+++ b/baby-rest-api/pom.xml
@@ -10,15 +10,62 @@
     </parent>
 
     <artifactId>baby-rest-api</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>ch.sebpiller.babyphone</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>baby-data-fetch</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>baby-data-process-tf</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-image-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/src/main/resources/contract/api-image-classifier.yaml</inputSpec>
+                            <apiPackage>ch.sebpiller.babyphone.image.api</apiPackage>
+                            <modelPackage>ch.sebpiller.babyphone.image.domain</modelPackage>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>generate-sound-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/src/main/resources/contract/api-sound-classifier.yaml</inputSpec>
+                            <apiPackage>ch.sebpiller.babyphone.sound.api</apiPackage>
+                            <modelPackage>ch.sebpiller.babyphone.sound.domain</modelPackage>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
