--- a/baby-swing-app/pom.xml
+++ b/baby-swing-app/pom.xml
@@ -29,14 +29,28 @@
             <artifactId>baby-data-process-piaihat</artifactId>
         </dependency>
 
+
+
         <!-- TODO remove -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>baby-samples-data</artifactId>
         </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.1.12</version>
         </dependency>
     </dependencies>
 
