--- a/dev-tools/local-elk/docker-compose.yaml
+++ b/dev-tools/local-elk/docker-compose.yaml
@@ -8,7 +8,13 @@ services:
       - bootstrap.memory_lock=true
       - xpack.security.enabled=false
       - xpack.security.audit.enabled=true
+      - ES_JAVA_OPTS=-Xmx512m
     #     - ELASTIC_PASSWORD=elastic_password123 # Change this password
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
+
     ulimits:
       memlock:
         soft: -1
@@ -27,6 +33,10 @@ services:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     #    - ELASTICSEARCH_USERNAME=elastic
     #    - ELASTICSEARCH_PASSWORD=elastic_password123 # Same as Elasticsearch
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
     ports:
       - "5601:5601"
     networks:
@@ -39,6 +49,10 @@ services:
     container_name: logstash
     environment:
       - LS_JAVA_OPTS=-Xms512m -Xmx512m
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
     volumes:
       - ./logstash.conf:/usr/share/logstash/config/logstash.conf:ro,Z
       #- ./jvm.options:/usr/share/logstash/config/jvm.options:ro,Z
@@ -53,8 +67,12 @@ services:
     image: docker.elastic.co/beats/filebeat:8.17.0
     container_name: filebeat
     user: root
+    deploy:
+      resources:
+        limits:
+          memory: 1024M
     volumes:
-      - ./filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - ./filebeat.yaml:/usr/share/filebeat/filebeat.yml
     depends_on:
       - elasticsearch
     networks:
