--- a/baby-rest-api/pom.xml
+++ b/baby-rest-api/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>baby-data-fetch</artifactId>
         </dependency>
@@ -33,10 +38,40 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+
+
+        <!-- JSON LOGGING-->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+        </dependency>
+
     </dependencies>
 
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+            </plugin>
+
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
@@ -47,7 +82,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/contract/api-image-classifier.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/contract/api-image-classifier.yaml
+                            </inputSpec>
                             <apiPackage>ch.sebpiller.babyphone.image.api</apiPackage>
                             <modelPackage>ch.sebpiller.babyphone.image.domain</modelPackage>
                         </configuration>
@@ -58,7 +94,8 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/contract/api-sound-classifier.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/contract/api-sound-classifier.yaml
+                            </inputSpec>
                             <apiPackage>ch.sebpiller.babyphone.sound.api</apiPackage>
                             <modelPackage>ch.sebpiller.babyphone.sound.domain</modelPackage>
                         </configuration>
